# factify

./: .gitignore  .pre-commit-config.yaml  01要件定義書_ともだち.docx  70aa27f3-01e9-41fa-a9cc-97c61025747c.txt  DEPLOY_OPTIMIZATION.md  Makefile  README.md  debug_output.txt  deploy.sh  main.py  pyproject.toml  sample.txt  test_search_api.sh  test_search_curl.sh  test_transaction_logging.py  update_env.sh
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yaml  copilot-instructions.md  fast-feedback.yaml
api/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  add_transactions_to_documents.py  aws_services.py  check_real_user_ids.py  config.py  debug_opensearch_fastapi.py  file_extractors.py  insert_transactions.py  main.py  requirements.txt  search.py
api/debug/: api_test.py
api/src/: __init__.py  aws_services.py  cognito_auth.py  config.py  metadata_handlers.py  models.py  settings.py  text_processors.py
api/src/auth/: cognito_auth.py
api/src/config/: __init__.py  cognito_config.py
api/src/constants/: __init__.py  cognito.py
api/src/services/: access_logger_service.py  opensearch_service.py
app/: README.md  pyproject.toml
infra/: .tool-versions  COGNITO_QUICKSIGHT_README.md  Makefile  README.md  app.py  cdk.context.json  cleanup.sh  cognito_template.json  debug_output.txt  pyproject.toml  requirements.txt
infra/infra/: auth_quicksight_stack.py  cognito_auth_stack.py  db_storage_stack.py  fastapi_fargate_cdk_stack.py  opensearch_stack.py  quicksight_management_stack.py  s3_cloudfront_stack.py  vpc_stack.py
scripts/: api_debug_output.txt  create_real_incentive_data.py  debug_documents.py  fast-deploy.sh  get_token.sh  sample.html  test_api_cognito.sh  test_auth_api.py  test_opensearch.py  update_env.sh
src/factify/: __init__.py
webapp/: .env.example  README_AUTH.md  build_output.txt  debug_output.txt  index.html  package-lock.json  package.json
webapp/src/: App.css  App.jsx  App.tsx
webapp/src/components/: FileUpload.css  FileUpload.tsx  Navigation.css  Navigation.tsx  PrivateRoute.tsx  Toast.css  Toast.tsx  UserFileList.css  UserFileList.tsx
webapp/src/config/: auth.ts  cognito.ts
webapp/src/contexts/: AuthContext.tsx  ToastContext.tsx
webapp/src/hooks/: useSWR.ts
webapp/src/pages/: About.tsx  Auth.css  (+13 more)
(+9 files in other folders)
