[project]
name = "factify"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pre-commit = "^4.2.0"

[tool.ruff]
# ターゲットとするPythonバージョン
target-version = "py311"

# 設定するルール
lint.select = [
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# 無視するルール
lint.ignore = []

# 行の長さの制限
line-length = 88

# 自動修正を適用する
fix = true

# 自動的にコードを整形する
format.quote-style = "double"
format.indent-style = "space"
format.skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-third-party = ["fastapi"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
