[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "factify-monorepo"
version = "0.1.0"
description = "Factify モノレポ"
readme = "README.md"
authors = [
    {name = "Your Name", email = "you@example.com"}
]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

# pre-commitの設定は.pre-commit-config.yamlに記述されています
