[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "factify-infra"
version = "0.1.0"
description = "AWS CDK Infrastructure for Factify"
readme = "README.md"
authors = []
packages = [{include = "infra"}]

[tool.poetry.dependencies]
python = ">=3.11"
aws-cdk-lib = "2.198.0"
constructs = ">=10.0.0,<11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
